# gain_robust_tracker

./: CMakeLists.txt  README.md
example/: main.cpp
include/: gain_robust_tracker.h
script/: invEMoR.m
src/: gain_robust_tracker.cc
